fix for horizontal scroll bar being hidden

--- a/static/base.css
+++ b/static/base.css
@@ -1054,6 +1054,10 @@ select.form-control{
     display: inline-block;
 }
 
+.modal .modal-body pre{
+    overflow:unset;
+}
+
 #settingsCategoriesAccordion .accordion-button {
     padding: 5px 15px;
     background-color: rgb(194 200 220);
